# jovian

./: .gitattributes  .gitignore  Dockerfile  README.md  bam.py  buildclf.py  bwasim.py  call.py  conda_requirements.yaml  dnaseq2seq.ipynb  docker-entrypoint.sh  example_training_conf.yaml  loader.py  main.py  model.py  phaser.py  phasertest1.vcf  pip_requirements.txt  pyproject.toml  pytest.ini  reftoken.ipynb  setup.py  sim.py  sw_functions.py  swloss.py  train.py  util.py  vcf.py  window.py
configs/: conf_train.yaml
dnaseq2seq/: bam.py  buildclf.py  call.py  loader.py  main.py  model.py  paracalltest.py  phaser.py  pregen.py  sim.py  swloss.py  train.py  transformer.py  util.py  vcf.py
dnaseq2seq/test/: test_bam.py  test_call.py  test_phaser.py  test_util.py  test_vcf.py
eval/: collate.py  filter.py  happy_lookup.py  reportcollated.py
eval/scripts/: call_eval.sh  eval_sub.sh  run_collate.sh  run_happy.sh
manuscript/: manuscript.tex
models/: 100M_s28_cont_mapsus_lolr2_epoch2.model  g44e280_clf.model  good44fix_epoch280.model  paraclf.model  s28ce40_bamfix.model
scripts/: README.md  assignclasses.py  avg_model_ckpts.py  bedfromvcf.py  buildclf.py  chrsplit.sh  complexvarfinder.py  convertgt.py  csv_labels_utils.py  download_giab.sh  emit_sus_regions.py  emit_tnsus_multi.py  generate_bed_labels.sh  happy_lookup.py  run_ddp_setup.sbatch  run_gem.sh  run_gensus.sh  run_pregen.sh  run_train.sh  run_train_clone.sh  run_vcfeval.py  splitbed.py  torchrun_ddp.sh
src/dnaseq2seq/: bam.py  (+13 more)
test/: test_bam.py  test_call.py  test_train.py  test_util.py  test_vcf.py
(+8 files in other folders)
