[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jenever"
version = "1.3.1"  # Replace with the actual parsed version
description = "Variant caller for next-generation sequencing data using generative haplotype prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Brendan O'Fallon", email = "brendan.ofallon@aruplab.com" }
]
dependencies = [
    "lz4",
    "pygit2",
    "pysam>=0.22",
    "numpy>=1.26",
    "intervaltree>=3.1",
    "pyyaml",
    "scikit-bio",
    "scikit-learn==1.3.2",
    "tqdm",
    "torch>=2.2",
    "pytest"
]
urls = { "Homepage" = "https://github.com/ARUP-NGS/jenever" }

[project.scripts]
jenever = "dnaseq2seq.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
